--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bcrypt": "^3.0.2",
     "core-js": "^2.5.4",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.8",
