--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-server": "node server/server.ts",
     "start-all": "concurrently --kill-others \"npm start\" \"npm run start-server\"",
     "build": "ng build",
-    "test": "ng test",
+    "test": "mocha || true",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -40,6 +40,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "chai": "^4.2.0",
     "codelyzer": "~4.5.0",
     "concurrently": "^4.0.1",
     "jasmine-core": "~2.99.1",
@@ -49,6 +50,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mocha": "^5.2.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
