--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
+    "@agm/core": "1.0.0-beta.3",
     "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.3",
     "@angular/common": "~7.0.0",
