--- a/package.json
+++ b/package.json
@@ -16,19 +16,15 @@
   },
   "private": true,
   "dependencies": {
-<<<<<<< HEAD
     "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "~7.0.0",
-=======
-    "@angular/animations": "^7.0.3",
-    "@angular/cdk": "^7.0.3",
->>>>>>> 3511367d8507e9976aac2ed7660e1da39dd8cab3
+    "@angular/cdk": "^7.0.4",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
+    "@angular/core": "^7.0.4",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
-    "@angular/material": "^7.0.3",
+    "@angular/material": "^7.0.4",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
