--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bcrypt": "^3.0.2",
     "core-js": "^2.5.4",
     "express-session": "^1.15.6",
+    "hammerjs": "^2.0.8",
     "http-server": "^0.11.1",
     "mongodb": "^3.1.8",
     "rxjs": "~6.3.3",
